# Rotten

./: Cargo.toml  README.md  flake.nix
.github/workflows/: nix.yml
src/: kinematics.rs  lib.rs  main.rs  repr.rs
